# Mutiny-SDK

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  pytest.network.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api-reference.md  configuration-reference.md  configuration.md  events.md  facade-and-lifecycle.md  getting-started.md  job-actions.md  troubleshooting.md  video-and-artifact-workflows.md
docs/zh-CN/: README.md  api-reference.md  configuration-reference.md  configuration.md  events.md  facade-and-lifecycle.md  getting-started.md  job-actions.md  troubleshooting.md  video-and-artifact-workflows.md
examples/: __init__.py  reference.py
examples/reference/: app.py  async_utils.py
mutiny/: __init__.py  _public_inputs.py  config.py  config.pyi  mutiny.py  mutiny.pyi  public_models.py  public_models.pyi  types.py  types.pyi
mutiny/discord/: __init__.py  account.py  constants.py  custom_ids.py  event_scanner.py  gateway_client.py  identity.py  message_interpreter.py  payload_builder.py  payload_types.py  provider.py  rest_client.py
mutiny/domain/: __init__.py  job.py  progress.py  result.py  result_shapes.py  state_machine.py  tile.py  time.py
mutiny/engine/: action_dispatcher.py  discord_engine.py  event_bus.py  events.py  execution_policy.py  indexing.py  progress.py  prompt_matching.py  provider.py  queue_policy.py  timeouts.py
mutiny/engine/reactors/: __init__.py  animate_reactor.py  base.py  blend_reactor.py  context.py  describe_reactor.py  error_reactor.py  imagine_reactor.py  progress_reactor.py  registry.py  reroll_reactor.py  upscale_reactor.py  variation_reactor.py
mutiny/engine/runtime/: __init__.py  artifact_prep.py  config_manager.py  job_lookup.py  (+1 more)
mutiny/interfaces/: __init__.py  commands.py  image.py
mutiny/services/: __init__.py  animate_prompt_builder.py  cancel_safety.py  context.py  error_catalog.py  image_processor.py  image_tiles.py  image_utils.py  interaction_cache.py  job_requests.py  job_store.py  job_submission.py  logging_utils.py  prompt_ordering.py  response_dump.py  streaming_client.py  tile_follow_up.py  token_provider.py  video_signature.py  webp_encoder.py
tests/: conftest.py  image_helpers.py  output_utils.py  snapshot_utils.py  test_action_dispatcher_prepare_image.py  test_animate_handler.py  test_animate_prompt_builder.py  test_api_validation.py  test_artifact_cache.py  test_button_send.py  test_cancel.py  test_cancel_safety.py  test_client_unit.py  test_config.py  test_custom_ids.py  test_custom_zoom_validation.py  test_discord_constants_contract.py  test_discord_service_contracts.py  test_dispatcher_wiring.py  test_engine_concurrency.py  test_engine_indexing.py  test_event_scanner.py  test_features.py  test_gateway_freeze.py  test_handler_contracts.py  test_handler_discovery.py  test_handler_ergonomics.py  test_handlers_base.py  test_handlers_freeze.py  test_image_change_mapping.py  test_image_processor.py  test_image_utils.py  test_inpaint_payload_freeze.py  test_job_index_phash.py  test_job_submission_resolution.py  test_logging_correlation.py  test_network_client.py  test_notify_bus.py  test_payload_freeze.py  test_payload_helpers.py  (+17 more)
tests/tools/: test_add_license_headers.py  test_check_consistency.py
tools/: README.md  add_license_headers.py  check_consistency.py  inspect_mj_dumps.py  mj_capture.user.js  mj_capture_playwright.py  tail_capture.py
tools/capture-extension/: background.js  manifest.json  popup.html  popup.js
tools/extension/: background.js  manifest.json  popup.html  popup.js
(+29 files in other folders)
