[project]
name = "mutiny-sdk"
version = "1.0.0"
description = "Unofficial Midjourney integration SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Artificial Sweetener", email = "artificialsweetenerai@proton.me" }
]

dependencies = [
    "httpx",
    "websockets==13.1",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "keyring",
    "opencv-python-headless",
    "numpy",
]

keywords = [
    "discord",
    "midjourney",
    "integration",
    "websocket",
    "httpx",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Artificial-Sweetener/Mutiny-SDK"
Repository = "https://github.com/Artificial-Sweetener/Mutiny-SDK"
Issues = "https://github.com/Artificial-Sweetener/Mutiny-SDK/issues"
Documentation = "https://github.com/Artificial-Sweetener/Mutiny-SDK/tree/main/docs"

[tool.setuptools]
packages = [
    "mutiny",
    "mutiny.discord",
    "mutiny.domain",
    "mutiny.engine",
    "mutiny.engine.reactors",
    "mutiny.interfaces",
    "mutiny.services",
    "mutiny.services.cache",
    "mutiny.services.index",
    "mutiny.services.metrics",
    "mutiny.services.notify",
    "mutiny.services.persistence",
]

[tool.setuptools.package-data]
mutiny = [
    "py.typed",
    "*.pyi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "black",
    "pre-commit",
    "python-semantic-release",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/mutiny_gui.bak.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "TID251"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "app" = { msg = "Do not import from app.*; use mutiny.* instead." }, "mutiny.domain.job" = { msg = "Use mutiny.types for shared types." }, "mutiny.domain.result" = { msg = "Use mutiny.types for shared types." }, "mutiny.client" = { msg = "Use the mutiny package facade instead of mutiny.client." } }

[tool.ruff.lint.per-file-ignores]
"mutiny/domain/*.py" = ["TID251"]
"mutiny/types.py" = ["TID251"]
"tests/*.py" = ["TID251"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore: automatically advance version to {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false
